Don't append when enter in playlist name edit.

I suspect a Qt bug here. Why doesn't the delegate consume the enter press?

BUG: 305203
FIXED-IN: 2.7